css/global.css
/* ... */
.AbsoluteTopLeft { position: absolute; top: 0; left: 0; }

/* General Form tags */
.checkoption {vertical-align: top;display: inline-block;width: 195px;margin: 2px; *display:inline;*zoom: 1;}
.checkbox {margin-right: 3px;vertical-align: top;display: inline-block;*display:inline;*zoom: 1;}
.checkboxtext {margin-right: 2px;width: 160px;display: inline-block;*display:inline;*zoom: 1;}
.checkboxes{margin-top: 5px;padding-left: 300px;}
.verticalcheckboxes {padding-left: 300px;}

.editcheckboxes {float:left;padding-left: 300px;}

.radioblock { float: left;padding-left: 300px;clear: left;margin-top: -1em;}
.radiotext label.customFieldLabel {float:none;}
.radiotext {margin-right: 2px;width: 160px;display: inline-block;*display:inline;*zoom: 1;}
.radio{margin-right: 3px;vertical-align: top;display: inline-block;*display:inline;*zoom: 1;}
.radiooption {vertical-align: top;display: inline-block;width: 195px;margin: 2px; *display:inline;*zoom: 1;}
#custom_access {padding-left: 300px;}
#custom_access .radiooptions{margin: 5px;}

/*General layout*/
#Header {
    padding: 5px 25px 5px 25px;
    margin:0;
    text-align:left;
    background-image:none;
    display: block !important;
    /* z-index and overflow are required for MessageBox to appear */
    z-index: 1 !important;
    overflow: visible;
    }

#TextHeader{font-size:25px;float:left;}
#TextHeader a {text-decoration:none;}
#TextDesc{font-size:1em;float:left;display:block;clear:left;}

.headerlink {margin:20px 25px; position: absolute; display: block; width: 400px; height: 55px;  top: 0; left: 0;}
.TeamCentreAlertIcon { position: relative; top: 3px;}

.ui-layout-container{overflow:auto;}
#HeaderNav1, #HeaderNav2 {padding:0;}
#HeaderNav1 {float:right;}
#HeaderNav2 {padding-left: 30px;}
#HeaderNav1 ul, #Headernav2 ul {padding: 0.2em 0;}
.HeaderImgLink{float:left;height:100%;width: auto;margin-right: 20px;}
#HeaderImg{margin:0;max-height: 40px; }
.HorizontalNav li,  .HorizontalNav li {display: inline-block;zoom: 1;*display: inline;}
.HorizontalNav li a, .HorizontalNav li a{display: inline-block;zoom: 1;*display: inline;}
.RecordBox {margin: 10px 20px 10px 0;}
h2#CollectionsPanelHeader {display:none;}

.ProfileImage { vertical-align:top; width:36px; height:36px; border-radius:36px}

/* Header size variants */
.HeaderSmall #HeaderNav1,  .HeaderSmall #HeaderNav2 {margin:2px 0 0 0;line-height: 30px;}
.HeaderSmall #HeaderImg{max-height:40px;}
.HeaderSmall #HeaderNav1 {height:30px;}
.HeaderSmall {min-height: 30px;}

.HeaderMid #HeaderNav1, .HeaderMid #HeaderNav2 {margin:12px 0 0 0;line-height: 35px;}
.HeaderMid #HeaderImg{max-height:50px; margin-top: 3px;}
.HeaderMid #HeaderNav1 {height:47px;}
.HeaderMid {min-height: 47px;}

.HeaderLarge #HeaderNav1, .HeaderLarge #HeaderNav2 {margin:5px 0 0 0;line-height: 20px;}
.HeaderLarge #HeaderImg{max-height:85px;}
.HeaderLarge #HeaderNav1 {height:70px;}
.HeaderLarge #HeaderNav2 {float:right; clear:both; padding-left: 20px;margin-top:0;}
.HeaderLarge {min-height: 85px;}

#HeaderNav1 .fa-user, #HeaderNav1 .fa-bars
    {
    font-size: 24px;
    }
    
/* Parent height set so that svg files scale correctly */
.HeaderSmall .HeaderImgLink
    {
    height: 40px;
    }
.HeaderMid .HeaderImgLink
    {
    height: 50px;
    }
.HeaderLarge .HeaderImgLink
    {
    height: 70px;
    }

/* Fix for .svg files */
img[src$=".svg"]
    {
    height: 100% !important; 
    }

/* Slim header with fixed top bar */
div#Header.SlimHeaderFixedPosition { width: 100%; position:fixed; top: 0; z-index: 1100; }
div#Header.SlimHeaderFixedPosition #HeaderNav1 { margin-right: 25px; }
div#Header.SlimHeaderFixedPosition #HeaderNav2 li:last-child { margin-right: 40px; }
div#CentralSpaceContainer.SlimHeaderFixedPosition { margin-top: 100px; }

/* Hide Header on Login page */
#Header.LoginHeader {display: none !important;}

.LoginHeaderImg {
    max-width: 400px;
    max-height: 60px;
    display: block;
    margin: 0 auto;
}

#Footer {clear: both; margin:20px 25px 38px 25px;padding:0;text-align:left;}
#FooterNavRight {float:right;text-align:right;margin-top: 10px;clear: right;}
#FooterNavRightBottom {float:right;text-align:right;margin-top: 10px;clear: right;font-size: 13px;}
#FooterNavLeft {float:left;text-align:left;margin-top: 10px;}
#FooterLanguages{margin-left:15px;}
#login_box #Footer {margin: 0 0 10px 0;}

#UICenter {
    width: calc(100% - 295px - 30px);
    margin-left: 30px;
}

#CentralSpaceContainer {
    margin:0 15px 20px;
    padding:0 0 0 0;
    text-align:left;
    }
#CentralSpaceContainerRestrict {margin:0 15px 20px 25px;padding:0;text-align:left;}
#CentralSpaceLogin {margin: 100px auto;padding:0;width: 600px;text-align:left;}
#CentralSpace {text-align:left;position:relative;display: inline-block; width: 100%;}

.TopInpageNav {clear: left;margin-bottom:15px;margin-right: 0;position:relative;min-height: 30px;}
.BottomInpageNav {clear: left;padding-top: 5px;margin: 20px 15px 20px 0; position:relative;}
.BottomInpageKey {margin-right: 15px; clear: left; text-align: left;}
.TopInpageNavLeft{float:left;}
.TopInpageNavRight{position:absolute;right:0;top:3px;width:max-content;text-align:right;}
.InpageNavLeftBlock {display:inline-block; *display: inline; *zoom: 1;text-align:left;margin: 0 20px 0 0;}
.InpageNavRightBlock {display:inline-block; *display: inline; *zoom: 1;text-align:left;margin: 0 15px 0 0;}
.BottomInpageNavLeft {float:left;}
.BottomInpageNavRight{float:right;margin-right:10px;text-align:right;}
.BottomInpageNavRight .TopInpageNavRight {position:relative;}
.TopInpageNav a:link, .TopInpageNav a:visited, .BottomInpageNav a:link, .BottomInpageNav a:visited , #CentralSpaceLogin a:link, #CentralSpaceLogin a:visited {text-decoration:none;}
.TopInpageNav a:hover, .TopInpageNav a:active, .BottomInpageNav a:hover, .BottomInpageNav a:active, #CentralSpaceLogin a:hover, #CentralSpaceLogin a:active {text-decoration:underline;}
.InpageNavLeftBlock span.Selected {font-weight: bold;}
/* ... */

